# deep-shelf

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
deepshelf/: __init__.py  cli.py  corpus.py  formatting.py  history.py  interview.py  openlibrary.py  profile.py  recommender.py  scoring.py  web.py
deepshelf/data/: deep_cuts.json
deepshelf/web/: index.html
docs/: DESIGN.md  index.html
tests/: test_deepshelf.py
