[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deepshelf"
version = "1.0.0"
description = "Book recommendations from the deep shelves — weighed against popularity and recency."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Deepshelf" }]
keywords = ["books", "recommendations", "open-library", "reading", "cli"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Text Processing :: General",
]
# Zero runtime dependencies: standard library only.
dependencies = []

[project.urls]
Homepage = "https://github.com/jmeblackley/cc-food"

[project.scripts]
deepshelf = "deepshelf.cli:main"

[tool.setuptools]
packages = ["deepshelf"]

[tool.setuptools.package-data]
deepshelf = ["data/*.json"]
